Styling: on mobile, if product no longer available, becomes red + family font added for ad so that it remains the same accross browsers + Credits

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -11,4 +11,8 @@
   a {
     color: #fff;
   }
+  .credits {
+    margin-top: 1rem;
+    font-size: 1rem;
+  }
 }
